# Automake-Autoconf-Template-Project

./: configure.ac
IsOkey/C++/: AUTHORS  Makefile.am  README  TODO  boostrap.sh  configure.ac
IsOkey/C++/src/: main.cc
